--- a/fcc_MAGIC_example.ipynb
+++ b/fcc_MAGIC_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhqUVxFQy9lMWljoWfF+UY",
+      "authorship_tag": "ABX9TyMbcj6hsP3g/XxmTrewHB7p",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -335,11 +335,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df[\"class\"] = (df[\"class\"] == \"g\").astype(int)"
+      ],
       "metadata": {
         "id": "npwze24SBrkz"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     }
   ]
