--- a/fcc_MAGIC_example.ipynb
+++ b/fcc_MAGIC_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbcj6hsP3g/XxmTrewHB7p",
+      "authorship_tag": "ABX9TyOnqCnVaPVsQ7pAs1Pa0Urx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "id": "Nx5oLpXAA3k6"
       },
@@ -52,9 +52,9 @@
           "height": 206
         },
         "id": "tNOSfN2DBOtw",
-        "outputId": "67db9680-d25f-4c48-ff7b-73f80728f71a"
+        "outputId": "22ddf3ab-a45e-48be-f1c4-41dd46c88298"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -77,7 +77,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-c30bc5be-9c00-4e66-92a6-983c681580b0\">\n",
+              "  <div id=\"df-56589589-71fc-4013-9865-d2b6a05596ee\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -184,7 +184,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c30bc5be-9c00-4e66-92a6-983c681580b0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-56589589-71fc-4013-9865-d2b6a05596ee')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -197,8 +197,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-2304ec8b-bf12-4cda-85e9-64732f6e97d4\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2304ec8b-bf12-4cda-85e9-64732f6e97d4')\"\n",
+              "    <div id=\"df-8df9ddd2-9381-4946-a636-8c75058f88d9\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8df9ddd2-9381-4946-a636-8c75058f88d9')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -255,7 +255,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-2304ec8b-bf12-4cda-85e9-64732f6e97d4 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-8df9ddd2-9381-4946-a636-8c75058f88d9 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -302,12 +302,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-c30bc5be-9c00-4e66-92a6-983c681580b0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-56589589-71fc-4013-9865-d2b6a05596ee button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-c30bc5be-9c00-4e66-92a6-983c681580b0');\n",
+              "          const element = document.querySelector('#df-56589589-71fc-4013-9865-d2b6a05596ee');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -329,7 +329,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -341,8 +341,300 @@
       "metadata": {
         "id": "npwze24SBrkz"
       },
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.head()"
+      ],
+      "metadata": {
+        "id": "ISDoqHVFygAb",
+        "outputId": "02e0396e-94c0-49fd-94f9-b80009717564",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "    fLength    fWidth   fSize   fConc  fConc1     fAsym  fM3Long  fM3Trans  \\\n",
+              "0   28.7967   16.0021  2.6449  0.3918  0.1982   27.7004  22.0110   -8.2027   \n",
+              "1   31.6036   11.7235  2.5185  0.5303  0.3773   26.2722  23.8238   -9.9574   \n",
+              "2  162.0520  136.0310  4.0612  0.0374  0.0187  116.7410 -64.8580  -45.2160   \n",
+              "3   23.8172    9.5728  2.3385  0.6147  0.3922   27.2107  -6.4633   -7.1513   \n",
+              "4   75.1362   30.9205  3.1611  0.3168  0.1832   -5.5277  28.5525   21.8393   \n",
+              "\n",
+              "    fAlpha     fDist  class  \n",
+              "0  40.0920   81.8828      1  \n",
+              "1   6.3609  205.2610      1  \n",
+              "2  76.9600  256.7880      1  \n",
+              "3  10.4490  116.7370      1  \n",
+              "4   4.6480  356.4620      1  "
+            ],
+            "text/html": [
+              "\n",
+              "\n",
+              "  <div id=\"df-7afd9aeb-fb51-4983-9dc8-33fd6f09494b\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>fLength</th>\n",
+              "      <th>fWidth</th>\n",
+              "      <th>fSize</th>\n",
+              "      <th>fConc</th>\n",
+              "      <th>fConc1</th>\n",
+              "      <th>fAsym</th>\n",
+              "      <th>fM3Long</th>\n",
+              "      <th>fM3Trans</th>\n",
+              "      <th>fAlpha</th>\n",
+              "      <th>fDist</th>\n",
+              "      <th>class</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>28.7967</td>\n",
+              "      <td>16.0021</td>\n",
+              "      <td>2.6449</td>\n",
+              "      <td>0.3918</td>\n",
+              "      <td>0.1982</td>\n",
+              "      <td>27.7004</td>\n",
+              "      <td>22.0110</td>\n",
+              "      <td>-8.2027</td>\n",
+              "      <td>40.0920</td>\n",
+              "      <td>81.8828</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>31.6036</td>\n",
+              "      <td>11.7235</td>\n",
+              "      <td>2.5185</td>\n",
+              "      <td>0.5303</td>\n",
+              "      <td>0.3773</td>\n",
+              "      <td>26.2722</td>\n",
+              "      <td>23.8238</td>\n",
+              "      <td>-9.9574</td>\n",
+              "      <td>6.3609</td>\n",
+              "      <td>205.2610</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>162.0520</td>\n",
+              "      <td>136.0310</td>\n",
+              "      <td>4.0612</td>\n",
+              "      <td>0.0374</td>\n",
+              "      <td>0.0187</td>\n",
+              "      <td>116.7410</td>\n",
+              "      <td>-64.8580</td>\n",
+              "      <td>-45.2160</td>\n",
+              "      <td>76.9600</td>\n",
+              "      <td>256.7880</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>23.8172</td>\n",
+              "      <td>9.5728</td>\n",
+              "      <td>2.3385</td>\n",
+              "      <td>0.6147</td>\n",
+              "      <td>0.3922</td>\n",
+              "      <td>27.2107</td>\n",
+              "      <td>-6.4633</td>\n",
+              "      <td>-7.1513</td>\n",
+              "      <td>10.4490</td>\n",
+              "      <td>116.7370</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>75.1362</td>\n",
+              "      <td>30.9205</td>\n",
+              "      <td>3.1611</td>\n",
+              "      <td>0.3168</td>\n",
+              "      <td>0.1832</td>\n",
+              "      <td>-5.5277</td>\n",
+              "      <td>28.5525</td>\n",
+              "      <td>21.8393</td>\n",
+              "      <td>4.6480</td>\n",
+              "      <td>356.4620</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7afd9aeb-fb51-4983-9dc8-33fd6f09494b')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "\n",
+              "\n",
+              "\n",
+              "    <div id=\"df-dc6ba193-d34f-4fb7-96b5-b3224150808d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dc6ba193-d34f-4fb7-96b5-b3224150808d')\"\n",
+              "              title=\"Suggest charts.\"\n",
+              "              style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "      </button>\n",
+              "    </div>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: #E8F0FE;\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: #1967D2;\n",
+              "    height: 32px;\n",
+              "    padding: 0 0 0 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: #E2EBFA;\n",
+              "    box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: #174EA6;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "    background-color: #3B4455;\n",
+              "    fill: #D2E3FC;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart:hover {\n",
+              "    background-color: #434B5C;\n",
+              "    box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "    fill: #FFFFFF;\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "    <script>\n",
+              "      async function quickchart(key) {\n",
+              "        const containerElement = document.querySelector('#' + key);\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      }\n",
+              "    </script>\n",
+              "\n",
+              "      <script>\n",
+              "\n",
+              "function displayQuickchartButton(domScope) {\n",
+              "  let quickchartButtonEl =\n",
+              "    domScope.querySelector('#df-dc6ba193-d34f-4fb7-96b5-b3224150808d button.colab-df-quickchart');\n",
+              "  quickchartButtonEl.style.display =\n",
+              "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "}\n",
+              "\n",
+              "        displayQuickchartButton(document);\n",
+              "      </script>\n",
+              "      <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-7afd9aeb-fb51-4983-9dc8-33fd6f09494b button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-7afd9aeb-fb51-4983-9dc8-33fd6f09494b');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     }
   ]
 }
